crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__extern_codegen_math.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__extern_codegen_math

extern java "krypton.runtime.KryptonIO" println(z7) -> Unit
extern java "java.lang.Math" abs(Int) -> Int
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare abs: (Int) -> Int
declare println: (z7) -> Unit

fn main() -> Int =
  let v0: Int = sub_int(0, 42)
  let v1: Int = call abs(v0)
  let v2: Unit = call println(v1)
  0
