crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__extern_typecheck_call.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__extern_typecheck_call

extern java "java.lang.Math" abs(Int) -> Int
extern java "java.lang.Math" max(Int, Int) -> Int
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare abs: (Int) -> Int
declare max: (Int, Int) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Int = call abs(5)
  let v2: Int = call max(v1, 3)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v3: Unit = call println(v0, v2)
  v3
