crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__hash_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__hash_basic

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn main() -> Unit =
  let v1: Dict[core/hash.Hash, Int] = get_dict core/hash.Hash[Int]
  let v0: Int = trait_call core/hash.Hash.hash(v1, 42)
  let_join v9(v7: Bool) =
    let v2: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v8: Unit = call println(v2, v7)
    v8
  in
  let v3: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v4: Dict[core/hash.Hash, Int] = get_dict core/hash.Hash[Int]
  let v5: Int = trait_call core/hash.Hash.hash(v4, 42)
  let v6: Bool = trait_call core/eq.Eq.eq(v3, v0, v5)
  jump v9(v6)
